# logos-rust-example-module

./: .gitignore  CMakeLists.txt  README.md  flake.nix  metadata.json
rust-caller-module/: CMakeLists.txt  metadata.json
rust-caller-module/rust-lib/: Cargo.toml
rust-caller-module/rust-lib/include/: rust_caller.h
rust-caller-module/rust-lib/src/: lib.rs
rust-lib/: Cargo.toml
rust-lib/include/: rust_example.h
rust-lib/src/: lib.rs
rust-provider-module/: CMakeLists.txt  metadata.json
rust-provider-module/rust-lib/: Cargo.toml
rust-provider-module/rust-lib/include/: rust_provider.h
rust-provider-module/rust-lib/src/: lib.rs
